2nd fix for chrome scrollbar

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -97,6 +97,7 @@ p {
   opacity: 1;
   text-align: center;
   width: 100vw;
+  max-width: 100%;
   color: white;
   left: 0;
   bottom: 0;
