--- a/static/css/vpMin600.css
+++ b/static/css/vpMin600.css
@@ -15,7 +15,8 @@
   top: 0;
   background-color: rgba(240, 248, 255, 0);
   text-align: center;
-  width: 100vw;
+  width: 100%;
+  max-width: 100%;
   z-index: 20;
   position: fixed;
   height: 6em;
